<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Athena Grades</string>
    <string name="about">About</string>
    <string name="signOut">Sign Out</string>
    <string name="developer">Developer: Jordan Kayse</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_placeholder">Confirm Password</string>  
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="classes">Classes</string>
    <string name="addClass">Add Class</string>
    <string name="addGrading">Grading</string>
    <string name="grading">Grading:</string>
    <string name="addProfessor">Professor</string>
    <string name="className">Class Name</string>
    <string name="required">*</string>
    <string name="submitClass">Submit</string>
    <string name="cancelAdd">Cancel</string>
    <string name="category">Category</string>
    <string name="percentage">%</string>
    <string name="addGrade">Add Grade</string>
    <string name="deleteClass">Delete Class</string>
    <string name="categoryName">Category</string>
    <string name="score">100%</string>
    <string name="grade">Assignment 1</string>
    <string name="addGradeName">Assignment Name</string>
    <string name="editGrade">Edit</string>
    <string name="editGradeTitle">Edit Grade</string>
    <string name="deleteGrade">Delete</string>
    
    <string name="addGradeButton">Submit</string>
    <string name="cancelAddGrade">Cancel</string>
    <string name="addGradeTitle">Add Grade</string>
    <string name="outOf">/</string>
    <string name="aboutText">Athena Grades is a general grade calculator. Just sign up and start adding classes!
        To calculate the grade you need on a final, just add it. Then edit the grade and see what happens to the total grade.</string>

    
    

</resources>
